made some changes in css; form of buttons/inputs

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                         <p>search traject</p>
                         <button>filtre</button>
                     </div>
-                    <div>
-                        <input type="ville de depart" name="" id="">
-                        <input type="ville d'arrivée" name="" id="">
+                    <div class="input_field_bottom_main_container">
+                        <input type="ville de depart" name="" id="" placeholder="Ville de Départ">
+                        <input type="ville d'arrivée" name="" id="" placeholder="Ville D'Arrivée">
                         <input type="date">
                     </div>
                     <button class="main-section-1-search-button"><b>Rechercher</b></button>
